second update , fixed backg image not showing

--- a/css/cssstyle.css
+++ b/css/cssstyle.css
@@ -108,7 +108,7 @@ div ul.navbar-nav li {
 }
 
 .bgImage {
-    background-image: url(/imgs/banner.png);
+    background-image: url(../imgs/banner.png);
     background-repeat: no-repeat;
 
 }
